--- a/src/main/resources/drones/explode/faf_missile.yml
+++ b/src/main/resources/drones/explode/faf_missile.yml
@@ -137,6 +137,15 @@ default:
       animal:
         - 'bd sound entity_evoker_prepare_attack {world} {x} {y} {z} 1 2'
 
+    # This section is run every time the drone has killed the target
+    killed:
+      player:
+        - 'bd actionbar {player} 4 &6Your f&&6f missile drone killed &c{target}'
+      monster:
+        - 'bd actionbar {player} 4 &6Your f&&6f missile drone killed &c{target}'
+      animal:
+        - 'bd actionbar {player} 4 &6Your f&&6f missile drone killed &c{target}'
+
     # Upgrade commands
     commands:
       levelup:
@@ -197,6 +206,13 @@ default:
         - 'bd sound entity_evoker_prepare_attack {world} {x} {y} {z} 1 2'
       animal:
         - 'bd sound entity_evoker_prepare_attack {world} {x} {y} {z} 1 2'
+    killed:
+      player:
+        - 'bd actionbar {player} 4 &6Your f&&6f missile drone killed &c{target}'
+      monster:
+        - 'bd actionbar {player} 4 &6Your f&&6f missile drone killed &c{target}'
+      animal:
+        - 'bd actionbar {player} 4 &6Your f&&6f missile drone killed &c{target}'
     commands:
       levelup:
         - 'battledrones message {player} &7[&dBattleDrones&7] &aYour f&&af missile drone is now a level higher!'
@@ -255,6 +271,13 @@ default:
         - 'bd sound entity_evoker_prepare_attack {world} {x} {y} {z} 1 2'
       animal:
         - 'bd sound entity_evoker_prepare_attack {world} {x} {y} {z} 1 2'
+    killed:
+      player:
+        - 'bd actionbar {player} 4 &6Your f&&6f missile drone killed &c{target}'
+      monster:
+        - 'bd actionbar {player} 4 &6Your f&&6f missile drone killed &c{target}'
+      animal:
+        - 'bd actionbar {player} 4 &6Your f&&6f missile drone killed &c{target}'
     commands:
       levelup:
         - 'battledrones message {player} &7[&dBattleDrones&7] &aYour f&&af missile drone is now a level higher!'
