--- a/src/main/resources/drones/energy/laser.yml
+++ b/src/main/resources/drones/energy/laser.yml
@@ -104,6 +104,15 @@ default:
       animal:
         - 'bd sound entity_guardian_death_land {world} {x} {y} {z} 1 2'
 
+    # This section is run every time the drone has killed the target
+    killed:
+      player:
+        - 'bd actionbar {player} 4 &6Your laser drone killed &c{target}'
+      monster:
+        - 'bd actionbar {player} 4 &6Your laser drone killed &c{target}'
+      animal:
+        - 'bd actionbar {player} 4 &6Your laser drone killed &c{target}'
+
     # Upgrade commands
     commands:
       levelup:
@@ -148,6 +157,13 @@ default:
         - 'bd sound entity_guardian_death_land {world} {x} {y} {z} 1 2'
       animal:
         - 'bd sound entity_guardian_death_land {world} {x} {y} {z} 1 2'
+    killed:
+      player:
+        - 'bd actionbar {player} 4 &6Your laser drone killed &c{target}'
+      monster:
+        - 'bd actionbar {player} 4 &6Your laser drone killed &c{target}'
+      animal:
+        - 'bd actionbar {player} 4 &6Your laser drone killed &c{target}'
     commands:
       levelup:
         - 'battledrones message {player} &7[&dBattleDrones&7] &aYour laser drone is now a level higher!'
@@ -190,6 +206,13 @@ default:
         - 'bd sound entity_guardian_death_land {world} {x} {y} {z} 1 2'
       animal:
         - 'bd sound entity_guardian_death_land {world} {x} {y} {z} 1 2'
+    killed:
+      player:
+        - 'bd actionbar {player} 4 &6Your laser drone killed &c{target}'
+      monster:
+        - 'bd actionbar {player} 4 &6Your laser drone killed &c{target}'
+      animal:
+        - 'bd actionbar {player} 4 &6Your laser drone killed &c{target}'
     commands:
       levelup:
         - 'battledrones message {player} &7[&dBattleDrones&7] &aYour laser drone is now a level higher!'
