--- a/src/main/resources/drones/explode/mortar.yml
+++ b/src/main/resources/drones/explode/mortar.yml
@@ -148,6 +148,15 @@ default:
       animal:
         - 'bd sound entity_evoker_prepare_attack {world} {x} {y} {z} 1 2'
 
+    # This section is run every time the drone has killed the target
+    killed:
+      player:
+        - 'bd actionbar {player} 4 &6Your mortar drone killed &c{target}'
+      monster:
+        - 'bd actionbar {player} 4 &6Your mortar drone killed &c{target}'
+      animal:
+        - 'bd actionbar {player} 4 &6Your mortar drone killed &c{target}'
+
     # Upgrade commands
     commands:
       levelup:
@@ -213,6 +222,13 @@ default:
         - 'bd sound entity_evoker_prepare_attack {world} {x} {y} {z} 1 2'
       animal:
         - 'bd sound entity_evoker_prepare_attack {world} {x} {y} {z} 1 2'
+    killed:
+      player:
+        - 'bd actionbar {player} 4 &6Your mortar drone killed &c{target}'
+      monster:
+        - 'bd actionbar {player} 4 &6Your mortar drone killed &c{target}'
+      animal:
+        - 'bd actionbar {player} 4 &6Your mortar drone killed &c{target}'
     commands:
       levelup:
         - 'battledrones message {player} &7[&dBattleDrones&7] &aYour mortar drone is now a level higher!'
@@ -276,6 +292,13 @@ default:
         - 'bd sound entity_evoker_prepare_attack {world} {x} {y} {z} 1 2'
       animal:
         - 'bd sound entity_evoker_prepare_attack {world} {x} {y} {z} 1 2'
+    killed:
+      player:
+        - 'bd actionbar {player} 4 &6Your mortar drone killed &c{target}'
+      monster:
+        - 'bd actionbar {player} 4 &6Your mortar drone killed &c{target}'
+      animal:
+        - 'bd actionbar {player} 4 &6Your mortar drone killed &c{target}'
     commands:
       levelup:
         - 'battledrones message {player} &7[&dBattleDrones&7] &aYour mortar drone is now a level higher!'
@@ -339,6 +362,13 @@ default:
         - 'bd sound entity_evoker_prepare_attack {world} {x} {y} {z} 1 2'
       animal:
         - 'bd sound entity_evoker_prepare_attack {world} {x} {y} {z} 1 2'
+    killed:
+      player:
+        - 'bd actionbar {player} 4 &6Your mortar drone killed &c{target}'
+      monster:
+        - 'bd actionbar {player} 4 &6Your mortar drone killed &c{target}'
+      animal:
+        - 'bd actionbar {player} 4 &6Your mortar drone killed &c{target}'
     commands:
       levelup:
         - 'battledrones message {player} &7[&dBattleDrones&7] &aYour mortar drone is now a level higher!'
