--- a/pom.xml
+++ b/pom.xml
@@ -6,7 +6,7 @@
 
     <groupId>me.MathiasMC</groupId>
     <artifactId>BattleDrones</artifactId>
-    <version>1.1.9</version>
+    <version>1.2.0</version>
     <name>BattleDrones</name>
     <description>Battle Drones will add new combat mechanics to your minecraft server.</description>
 
@@ -73,6 +73,11 @@
             <artifactId>LandsAPI</artifactId>
             <version>4.7.3</version>
             <scope>provided</scope>
+        </dependency>
+        <dependency>
+            <groupId>com.github.SaberLLC</groupId>
+            <artifactId>Saber-Factions</artifactId>
+            <version>2.3.3-STABLE</version>
         </dependency>
     </dependencies>
 
